[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "johnnypatterson2014",email = "johnny.patterson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=0.3.19,<0.4.0)",
    "langgraph (>=0.3.0,<0.4.0)",
    "langchain-openai (>=0.3.7,<0.4.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "langchain-community (>=0.3.18,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
